# super_diff

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .prettierignore  .prettierrc.json  .rubocop.yml  .rubocop_todo.yml  .tool-versions  .travis.yml  ARCHITECTURE.md  Appraisals  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_ENV  Gemfile  Guardfile  LICENSE  README.md  Rakefile  SECURITY.md  index.html  mkdocs.yml  package.json  pyproject.toml  super_diff.gemspec  super_diff.rb  super_diff_test.rb  tea.yaml  zeus.json
.github/: FUNDING.yml
.husky/: pre-push
config/: zeus_plan.rb
doc/: after.rb  carbon.md
docs/: after.rb  before.rb  carbon.md  index.md
docs-support/: after.rb  before.rb  carbon-config.json
gemfiles/: no_rails.gemfile  no_rails_rspec_gte_3_10.gemfile  no_rails_rspec_gte_3_13.gemfile  no_rails_rspec_lt_3_10.gemfile  rails_5_0.gemfile  rails_5_0_rspec_gte_3_10.gemfile  rails_5_0_rspec_lt_3_10.gemfile  rails_5_1.gemfile  rails_5_1_rspec_gte_3_10.gemfile  rails_5_1_rspec_lt_3_10.gemfile  rails_5_2.gemfile  rails_5_2_rspec_gte_3_10.gemfile  rails_5_2_rspec_lt_3_10.gemfile  rails_6_0.gemfile  rails_6_0_rspec_gte_3_10.gemfile  rails_6_0_rspec_gte_3_13.gemfile  rails_6_0_rspec_lt_3_10.gemfile  rails_6_1_rspec_gte_3_10.gemfile  rails_6_1_rspec_gte_3_13.gemfile  rails_6_1_rspec_lt_3_10.gemfile  rails_7_0_rspec_gte_3_10.gemfile  rails_7_0_rspec_gte_3_13.gemfile  rails_7_0_rspec_lt_3_10.gemfile  rails_7_1_rspec_gte_3_10.gemfile  rails_7_1_rspec_gte_3_13.gemfile  rails_7_1_rspec_lt_3_10.gemfile  rails_7_2_rspec_gte_3_10.gemfile  (+8 more)
(+750 files in other folders)
