[tool.poetry]
name = "super-diff"
version = "0.0.0"
description = "A more helpful way to view differences between complex data structures in RSpec"
authors = ["Elliot Winkler <elliot.winkler@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.group.dev.dependencies]
python = "^3.12"
mkdocs = { version = "^1.5.3", python = ">=3.7" }
mkdocs-material = { version = "^9.5.9", python = ">=3.8" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
